--- a/core/common/src/main/res/values/strings.xml
+++ b/core/common/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">PestPatrol</string>
+    <string name="app_logo">App logo</string>
     <string name="error_uknown">Unknown error</string>
 </resources>
