feat(home): slice home (!)
Home unfinished minus reminder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PestPatrol</string>
+    <string name="snap_detection">Snap Detection</string>
 </resources>
