--- a/core/common/src/main/res/values/strings.xml
+++ b/core/common/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">PestPatrol</string>
     <string name="app_logo">App logo</string>
     <string name="error_uknown">Unknown error</string>
+    <string name="profile_icon">Profile icon</string>
 </resources>
