--- a/core/common/src/main/res/values/strings.xml
+++ b/core/common/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="app_logo">App logo</string>
     <string name="error_uknown">Unknown error</string>
     <string name="profile_icon">Profile icon</string>
+    <string name="error_network_connection">Network connection error</string>
 </resources>
