--- a/features/auth/auth_presentation/src/main/res/values/strings.xml
+++ b/features/auth/auth_presentation/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="full_name">Full Name</string>
     <string name="input_your_full_name">Input your full name</string>
     <string name="do_you_have_an_account">Do you have an account?</string>
+    <string name="success_register">Your account has been created successfully</string>
 </resources>
