--- a/features/auth/auth_presentation/src/main/res/values/strings.xml
+++ b/features/auth/auth_presentation/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="input_your_full_name">Input your full name</string>
     <string name="do_you_have_an_account">Do you have an account?</string>
     <string name="success_register">Your account has been created successfully</string>
+    <string name="coming_soon">Coming Soon</string>
 </resources>
