feat(snap_detection): add cameraView (!)
- bug fix bottom nav
- profPicLink still won't load

--- a/features/snap_detection/snap_detection_presentation/src/main/res/values/strings.xml
+++ b/features/snap_detection/snap_detection_presentation/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="camera">Camera</string>
     <string name="import_picture">Import</string>
     <string name="from_your_gallery">from your gallery</string>
+    <string name="error_failed_to_make_permissions_request">Failed to make permissions request</string>
 </resources>
