feat(snap_detection): implement predict through gallery

--- a/features/snap_detection/snap_detection_presentation/src/main/res/values/strings.xml
+++ b/features/snap_detection/snap_detection_presentation/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="paddy_care">Paddy Care</string>
     <string name="dropdown">Dropdown</string>
     <string name="no_description">No Description</string>
+    <string name="choose_picture_from_gallery">Choose picture from gallery</string>
 </resources>
