--- a/features/home/home_presentation/src/main/res/values/strings.xml
+++ b/features/home/home_presentation/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="home">Home</string>
     <string name="snap_history">Snap History</string>
     <string name="search_disease">Search Disease</string>
+    <string name="select">Select</string>
 </resources>
