feat(home): implement articles

--- a/features/home/home_presentation/src/main/res/values/strings.xml
+++ b/features/home/home_presentation/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="edit_profile">Edit Profile</string>
     <string name="logout">Logout</string>
     <string name="logout_from_your_account">Logout from your account</string>
+    <string name="favorite">Favorite</string>
 </resources>
