--- a/core/common/src/main/res/values/strings.xml
+++ b/core/common/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="error_uknown">Unknown error</string>
     <string name="profile_icon">Profile icon</string>
     <string name="error_network_connection">Network connection error</string>
+    <string name="coming_soon">Coming Soon</string>
 </resources>
